--- a/.github/workflows/firebase_web.yml
+++ b/.github/workflows/firebase_web.yml
@@ -2,7 +2,7 @@ name: Firebase hosting
 
 on:
   push:
-    branches: [master, dev]
+    branches: [main, dev]
 
 jobs:
   deploy:
@@ -26,10 +26,10 @@ jobs:
         run: firebase deploy --only hosting:dev --non-interactive --token ${{secrets.FIREBASE_TOKEN}} -m "RunID ${{ github.run_id }} Commit SHA ${{ github.sha }}"
 
       - name: Deploy to production site
-        if: github.ref == 'refs/heads/master'
+        if: github.ref == 'refs/heads/main'
         run: firebase deploy --only hosting:prod --non-interactive --token ${{secrets.FIREBASE_TOKEN}} -m "RunID ${{ github.run_id }} Commit SHA ${{ github.sha }}"
 
       - name: Archive build Artifact
-        uses: actions/upload-artifact@master
+        uses: actions/upload-artifact@main
         with:
           path: build
