--- a/.github/workflows/firebase_web.yml
+++ b/.github/workflows/firebase_web.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Install firebase tools
         run: |
           sudo npm install -g firebase-tools
-          firebase use rid1-test --token ${{secrets.FIREBASE_TOKEN}}
+          firebase use yoyo-pajak --token ${{secrets.FIREBASE_TOKEN}}
 
       - name: Build website
         run: |
