WOW CI&CD checking/Github Action

--- a/.firebaserc
+++ b/.firebaserc
@@ -9,7 +9,7 @@
           "rid1-test-development"
         ],
         "prod": [
-          "rid1-test-production"
+          "yoyo-pajak"
         ]
       }
     }
