--- a/.github/workflows/firebase_web.yml
+++ b/.github/workflows/firebase_web.yml
@@ -2,7 +2,9 @@ name: Firebase hosting
 
 on:
   push:
-    branches: [main, dev]
+    tags:
+      - "prod_version*"
+      - "dev_version*"
 
 jobs:
   deploy:
@@ -22,11 +24,11 @@ jobs:
           yarn build
 
       - name: Deploy to staging site
-        if: github.ref == 'refs/heads/dev'
+        if: startsWith(github.ref, 'refs/tags/dev_version')
         run: firebase deploy --only hosting:dev --non-interactive --token ${{secrets.FIREBASE_TOKEN}} -m "RunID ${{ github.run_id }} Commit SHA ${{ github.sha }}"
 
       - name: Deploy to production site
-        if: github.ref == 'refs/heads/main'
+        if: startsWith(github.ref, 'refs/tags/prod_version')
         run: firebase deploy --only hosting:prod --non-interactive --token ${{secrets.FIREBASE_TOKEN}} -m "RunID ${{ github.run_id }} Commit SHA ${{ github.sha }}"
 
       - name: Archive build Artifact
