--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
+    "@vueuse/head": "^2.0.0",
     "bootstrap": "^5.3.3",
     "firebase": "^10.12.3",
     "vue": "^3.4.29",
